infra/k8s/ingress/depl-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-learn-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  # tls:
  #   - hosts:
  #       - k8s24.lanthanion.com
  #     secretName: k8s-learn-tls
  rules:
    #  - host: k8s24.lanthanion.com com reload
    - http:
        paths:
          - path: /ingredients/?(.*)
            backend:
              serviceName: ing-srv
              servicePort: 80
